Fix to image being stretched in google chrome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,8 +352,7 @@ select#country option {
 	display: flex;
 	padding: 0;
 	margin-bottom: 1rem;
-	width: auto;
-	height: 100%;
+	height: auto;
 	max-height: 30vh;
 	max-width: 100%;
 	text-align: center;
